# noshow_iq_66337

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci-cd.yml  lint.yml
models/: model.pkl
noshow_iq/: api.py  db.py  model.py  preprocess.py  schema.py
notebooks/: _eda.ipynb
tests/: test_api.py  test_model.py  test_preprocess.py
