[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noshow-iq-66337"
version = "0.1.0"
description = "Patient appointment no-show prediction API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pymongo>=4.6",
    "joblib>=1.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "httpx"]

[project.urls]
Repository = "https://github.com/jawadalishafaqat/noshow-iq-66337"

[tool.hatch.build.targets.wheel]
packages = ["noshow_iq"]

[tool.pytest.ini_options]
testpaths = ["tests"]